--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
 
             </div>
             <div class="image__sell">
-               <img src="images/calc.svg" width="198px" height="183px" alt="error">
+               <img src="images/calc.svg" alt="error">
+               <!-- width="198px" height="183px" -->
             </div>
          </form>
       </div>
