--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <div class="header" id="header">
       <div class="header__container">
          <a class="header__logo" href="">
-            <img src="images/Logo Arxi.svg " alt="">
+            <img src="images/logo.svg" alt="logo">
          </a>
          <nav class="menu">
             <a href=""><li class="menu__item">Услуги</li></a>
@@ -28,8 +28,8 @@
             <span></span>
          </div>
          <div class="header__contact phone">
-            <a class="phone__first" href="79015945400">+7 (901) 594 54 00</a>
-            <a class="phone__second" href="79018743270">+7 (901) 874 32 70</a>
+            <a class="phone__first" href="77273934021">+7 (727) 393 40 21</a>
+            <a class="phone__second" href="77025947773">+7 (702) 594 77 73</a>
          </div>
          <a class="header__button" href="#popup">
             Заказать звонок
@@ -435,10 +435,10 @@
    <div class="s10">
       <div class="s10__content">
          <div class="s10__title">Наши контакты</div>
-         <div class="s10__place">г. Аcтана, ул. Абая 258, БЦ "ХанШатыр",<br>8-этаж, 834 кабинет</div>
+         <div class="s10__place">г. Алматы, ул. Абая 151, БЦ "Алатау",<br>5-этаж, 504 кабинет</div>
          <div class="s10__phone">
-            <p>+7 (901) 874-32-70</p>
-            <p>+7 (901) 594-54-00</p>
+            <p>+7 (702) 594-77-73</p>
+            <p>+7 (727) 393-40-21</p>
          </div>
          <div class="s10__gmail">info@gmail.com</div>
          <div class="s10__links">
@@ -454,7 +454,7 @@
       <div class="footer__container">
          <img src="images/Icon-copyright.svg" alt="">
          <p class="footer__text">
-            2021 Ussiix
+            2021 Arxius
          </p>
       </div>
    </div>
@@ -468,16 +468,16 @@
             <div class="menu__open-item"><a href="">Контакты</a></div>
          </nav>
          <div class="menu__open-info">
-            <div class="menu__open-phone1">+7 (901) 594 54 00</div>
-            <div class="menu__open-phone2">+7 (901) 874 32 70</div>
+            <div class="menu__open-phone1">+7 (727) 393 40 21</div>
+            <div class="menu__open-phone2">+7 (702) 594 77 73</div>
          </div>
          <div class="timetable">Пн-пт с 9:00 до 18:00</div>
          <div class="menu__open-links">
             <div class="menu__open-link1">
-              <a href=""><img src="images/whatsapp.png" alt=""></a>
+              <a href=""><img src="images/whatsapp.svg" alt="whatsapp icon"></a>
             </div>
             <div class="menu__open-link2">
-               <a href=""><img src="images/viber.png" alt=""></a>
+               <a href=""><img src="images/viber.svg" alt="viber icon"></a>
             </div>
          </div>
          <div class="menu__open-close">
