--- a/index.html
+++ b/index.html
@@ -446,8 +446,9 @@
             <div class="s10_link2"><a href=""><img src="images/Icon-facebook.svg" alt=""></a></div>
          </div>
          <div class="_lay"></div>
-      </div>  
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.5237790149627!2d76.90260511486497!3d43.24044328704159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3883693a4384dac3%3A0x482e3dd392dee8e2!2z0YPQu9C40YbQsCDQkNGD0Y3Qt9C-0LLQsCwg0JDQu9C80LDRgtGLIDA1MDAwMCwg0JrQsNC30LDRhdGB0YLQsNC9!5e0!3m2!1sru!2sby!4v1612795413942!5m2!1sru!2sby" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> 
+      </div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.5751229343628!2d76.88945371462698!3d43.239366987111126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38836916f2eee6e1%3A0x233f746791e8bf22!2z0JHQuNC30L3QtdGBLdGG0LXQvdGC0YAgItCQ0JvQkNCi0JDQoyIsINC_0YDQvtGB0L8uINCQ0LHQsNGPIDE1MSwg0JDQu9C80LDRgtGLIDA1MDAwMA!5e0!3m2!1sru!2skz!4v1614428956495!5m2!1sru!2skz" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>  
+      <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.5237790149627!2d76.90260511486497!3d43.24044328704159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3883693a4384dac3%3A0x482e3dd392dee8e2!2z0YPQu9C40YbQsCDQkNGD0Y3Qt9C-0LLQsCwg0JDQu9C80LDRgtGLIDA1MDAwMCwg0JrQsNC30LDRhdGB0YLQsNC9!5e0!3m2!1sru!2sby!4v1612795413942!5m2!1sru!2sby" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>  -->
    </div> 
 
    <div class="footer">
