--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="images/logo.svg" alt="logo">
          </a>
          <nav class="menu">
-            <a href=""><li class="menu__item">Услуги</li></a>
+            <a href="#services"><li class="menu__item">Услуги</li></a>
             <a href=""><li class="menu__item">Стоимость</li></a>
             <a href=""><li class="menu__item">Клиенты</li></a>
             <a href=""><li class="menu__item">Контакты</li></a>
@@ -64,7 +64,7 @@
    </div>
 
    <div class="s2">
-      <div class="s2__container">
+      <div class="s2__container"><a name="services"></a>
          <div class="s2__title main-title">
             ПОЛНЫЙ СПЕКТР <span class="_inBlue">БУХГАЛТЕРСКИХ УСЛУГ</span>
          </div>
