--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
          </a>
          <nav class="menu">
             <a href="#services"><li class="menu__item">Услуги</li></a>
-            <a href=""><li class="menu__item">Стоимость</li></a>
-            <a href=""><li class="menu__item">Клиенты</li></a>
-            <a href=""><li class="menu__item">Контакты</li></a>
+            <a href="#cost"><li class="menu__item">Стоимость</li></a>
+            <a href="#clients"><li class="menu__item">Клиенты</li></a>
+            <a href="#contacts"><li class="menu__item">Контакты</li></a>
          </nav>
          <div class="menu__burger">
             <span></span>
@@ -196,7 +196,7 @@
       </div>
    </div>
    <div class="s5">
-      <div class="s5__form">
+      <div class="s5__form"><a name="cost"></a>
          <form action="" class="s5__form-wrap">
             <div class="form__content">
                <div class="form__title">
@@ -280,7 +280,7 @@
    </div>
 
    <div class="s8">
-      <div class="s6__title">
+      <div class="s6__title"><a name="clients"></a>
          Отзывы наших клиентов
       </div>
       <div class="s8__slider-com">
@@ -433,7 +433,7 @@
    </div>
 
    <div class="s10">
-      <div class="s10__content">
+      <div class="s10__content"><a name="contacts"></a>
          <div class="s10__title">Наши контакты</div>
          <div class="s10__place">г. Алматы, ул. Абая 151, БЦ "Алатау",<br>5-этаж, 504 кабинет</div>
          <div class="s10__phone">
