href desktop mobile

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
       </div>
    </div>
 
-   <div class="s2">
-      <div class="s2__container"><a name="services"></a>
+   <div id="services" class="s2">
+      <div class="s2__container">
+         <!-- <a name="services"></a> -->
          <div class="s2__title main-title">
             ПОЛНЫЙ СПЕКТР <span class="_inBlue">БУХГАЛТЕРСКИХ УСЛУГ</span>
          </div>
@@ -172,7 +173,7 @@
                <div class="s4__item-text">Стандартизированные бизнес-<br>процессы и система внутреннего контроля позволяют нам решать сложные вопросы быстро и эффективно</div>
             </div>
             <div class="s4__item _right">
-               <div class="s4__item-title">Экономия времени</div>
+               <div id="cost" class="s4__item-title">Экономия времени</div>
                <div class="s4__item-text">Вы сможете полностью сконцентрироваться на основном бизнесе и не тратить время на решение бухгалтерского и налогового учета</div>
             </div>
          </div>
@@ -195,8 +196,14 @@
          </div>
       </div>
    </div>
+
+   <!-- <div id="cost" class="s5info">
+      <div class="s5info__item-text main-title">Для каждого клиента стоимость услуг рассчитывается индивидуально, после проведения анализа и изучения Вашей организации, мы оперативно предложим удобный для Вас вариант решения и самую оптимальную стоимость!</div>
+   </div> -->
+
    <div class="s5">
-      <div class="s5__form"><a name="cost"></a>
+      <div class="s5__form">
+         <!-- <a name="cost"></a> -->
          <form action="" class="s5__form-wrap">
             <div class="form__content">
                <div class="form__title">
@@ -279,8 +286,9 @@
       </div>
    </div>
 
-   <div class="s8">
-      <div class="s6__title"><a name="clients"></a>
+   <div id="clients" class="s8">
+      <div class="s6__title">
+         <!-- <a name="clients"></a> -->
          Отзывы наших клиентов
       </div>
       <div class="s8__slider-com">
@@ -432,8 +440,9 @@
 
    </div>
 
-   <div class="s10">
-      <div class="s10__content"><a name="contacts"></a>
+   <div id="contacts" class="s10">
+      <div class="s10__content">
+         <!-- <a name="contacts"></a> -->
          <div class="s10__title">Наши контакты</div>
          <div class="s10__place">г. Алматы, ул. Абая 151, БЦ "Алатау",<br>5-этаж, 504 кабинет</div>
          <div class="s10__phone">
@@ -462,10 +471,10 @@
    <div class="menu__open">
       <div class="menu__open-content">
          <nav class="menu__open-nav">
-            <div class="menu__open-item"><a href="">Услуги</a></div>
-            <div class="menu__open-item"><a href="">Стоимость</a></div>
-            <div class="menu__open-item"><a href="">Клиенты</a></div>
-            <div class="menu__open-item"><a href="">Контакты</a></div>
+            <div class="menu__open-item"><a href="#services">Услуги</a></div>
+            <div class="menu__open-item"><a href="#cost">Стоимость</a></div>
+            <div class="menu__open-item"><a href="#clients">Клиенты</a></div>
+            <div class="menu__open-item"><a href="#contacts">Контакты</a></div>
          </nav>
          <div class="menu__open-info">
             <div class="menu__open-phone1">+7 (727) 393 40 21</div>
