--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                <div class="s4__item-text">Стандартизированные бизнес-<br>процессы и система внутреннего контроля позволяют нам решать сложные вопросы быстро и эффективно</div>
             </div>
             <div class="s4__item _right">
-               <div id="cost" class="s4__item-title">Экономия времени</div>
+               <div class="s4__item-title">Экономия времени</div>
                <div class="s4__item-text">Вы сможете полностью сконцентрироваться на основном бизнесе и не тратить время на решение бухгалтерского и налогового учета</div>
             </div>
          </div>
@@ -189,7 +189,7 @@
                   с Вашей компанией в срок 
                   с надлежащим качеством</div>
             </div>
-            <div class="s4__item">
+            <div id="cost" class="s4__item">
                <div class="s4__item-title">Конфиденциальность</div>
                <div class="s4__item-text">Компания обеспечит конфиденциальность полученной информации и сведений,<br>содержащихся в документах</div>
             </div>
