--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
             <p>+7 (702) 594-77-73</p>
             <p>+7 (727) 393-40-21</p>
          </div>
-         <div class="s10__gmail">info@gmail.com</div>
+         <div class="s10__gmail">oksana@arxius.kz</div>
          <div class="s10__links">
             <div class="s10_link1"><a href=""><img src="images/Icon-instagram.svg" alt=""></a></div>
             <div class="s10_link2"><a href=""><img src="images/Icon-facebook.svg" alt=""></a></div>
